--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,6 +76,7 @@
 
 
     <RelativeLayout
+        android:background="@drawable/strongfriend"
         android:layout_below="@+id/linearlayout_name"
         android:gravity="center_horizontal"
         android:id="@+id/linearlayout_text"
@@ -90,7 +91,10 @@
             android:id="@+id/text"
             android:layout_margin="15dp"
             android:textSize="20dp"
-            android:text="팀소개개개개개개개개개"
+            android:textColor="@color/colorDark"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:text=" 창단일: 2019/ 08/ 05 \n 계약기간: 1일\n 초기자금: 3000원\n 조훈: 완되면 되게하라!"
 
             android:layout_width="match_parent"
             android:layout_above="@+id/btn_git"
@@ -106,7 +110,7 @@
             android:text="github"
             android:layout_alignLeft="@+id/text"
             android:layout_marginLeft="15dp"
-         />
+            />
         <Button
             android:layout_marginRight="15dp"
             android:layout_alignTop="@+id/btn_git"
