--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
 
         <ImageView
             android:id="@+id/imageView_han"
-            android:layout_width="400px"
+            android:layout_width="350px"
             android:layout_height="600px"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
@@ -29,14 +29,14 @@
 
         <ImageView
             android:id="@+id/imageView_ro"
-            android:layout_width="400px"
+            android:layout_width="350px"
             android:layout_height="600px"
             android:layout_marginRight="10dp"
             android:scaleType="centerCrop" />
 
         <ImageView
             android:id="@+id/imageView_jang"
-            android:layout_width="400px"
+            android:layout_width="350px"
             android:layout_height="600px"
             android:layout_marginRight="10dp"
             android:scaleType="centerCrop" />
@@ -53,7 +53,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="한창영"
+            android:text="한찬영"
             android:textSize="25dp"
             android:textStyle="bold"/>
         <TextView
